scalaplugin/src/test/resource/acyclic/src/test/resources/fail/indirect/B.scala
package fail.indirect

class B extends C
